Fix device setup
