# internal/pkg/wizard/domain/entity/device/builder.go
@@ -2,7 +2,7 @@ package device
 
 import (
 	"bwizard/internal/pkg/wizard/domain/valueobject/device"
-	"github.com/google/uuid"
+	"github.com/gofrs/uuid/v5"
 	"time"
 )
 
@@ -11,7 +11,9 @@ type Builder struct {
 }
 
 func NewBuilder() *Builder {
-	return &Builder{}
+	return &Builder{
+		Device: &Device{},
+	}
 }
 
 func (b *Builder) ID(v uuid.UUID) *Builder {
@@ -22,6 +24,12 @@ func (b *Builder) ID(v uuid.UUID) *Builder {
 
 func (b *Builder) Name(v string) *Builder {
 	b.Device.Name = v
+
+	return b
+}
+
+func (b *Builder) Hostname(v string) *Builder {
+	b.Device.Hostname = v
 
 	return b
 }
@@ -44,8 +52,32 @@ func (b *Builder) LastBackup(v *time.Time) *Builder {
 	return b
 }
 
-func (b *Builder) IPs(v []device.IPAddress) *Builder {
+func (b *Builder) CPU(v string) *Builder {
+	b.Device.CPU = v
+
+	return b
+}
+
+func (b *Builder) Ram(v string) *Builder {
+	b.Device.Ram = v
+
+	return b
+}
+
+func (b *Builder) Disks(v []string) *Builder {
+	b.Device.Disks = v
+
+	return b
+}
+
+func (b *Builder) IPs(v []string) *Builder {
 	b.Device.IPs = v
+
+	return b
+}
+
+func (b *Builder) OperatingSystem(v string) *Builder {
+	b.Device.OperatingSystem = v
 
 	return b
 }
@@ -68,27 +100,38 @@ func (b *Builder) UpdatedAt(v time.Time) *Builder {
 	return b
 }
 
-func (b *Builder) Build() *Device {
-	CreatedAt := b.Device.CreatedAt
-	UpdatedAt := b.Device.UpdatedAt
+func (b *Builder) Build() (*Device, error) {
+	if b.Device.ID.IsNil() {
+		deviceID, err := uuid.NewV7()
+		if err != nil {
+			return nil, err
+		}
 
-	if CreatedAt.IsZero() {
+		b.Device.ID = deviceID
+	}
+
+	if b.Device.CreatedAt.IsZero() {
 		b.Device.CreatedAt = time.Now()
 	}
 
-	if UpdatedAt.IsZero() {
+	if b.Device.UpdatedAt.IsZero() {
 		b.Device.UpdatedAt = time.Now()
 	}
 
 	return &Device{
-		ID:         b.Device.ID,
-		Name:       b.Device.Name,
-		Kind:       b.Device.Kind,
-		Protection: b.Device.Protection,
-		LastBackup: b.Device.LastBackup,
-		IPs:        b.Device.IPs,
-		Agent:      b.Device.Agent,
-		CreatedAt:  b.Device.CreatedAt,
-		UpdatedAt:  b.Device.UpdatedAt,
-	}
+		ID:              b.Device.ID,
+		Name:            b.Device.Name,
+		Hostname:        b.Device.Hostname,
+		Kind:            b.Device.Kind,
+		Protection:      b.Device.Protection,
+		LastBackup:      b.Device.LastBackup,
+		CPU:             b.Device.CPU,
+		Ram:             b.Device.Ram,
+		Disks:           b.Device.Disks,
+		IPs:             b.Device.IPs,
+		Agent:           b.Device.Agent,
+		OperatingSystem: b.Device.OperatingSystem,
+		CreatedAt:       b.Device.CreatedAt,
+		UpdatedAt:       b.Device.UpdatedAt,
+	}, nil
 }
