# internal/pkg/wizard/domain/entity/device/device.go
@@ -2,18 +2,23 @@ package device
 
 import (
 	"bwizard/internal/pkg/wizard/domain/valueobject/device"
-	"github.com/google/uuid"
+	"github.com/gofrs/uuid/v5"
 	"time"
 )
 
 type Device struct {
-	ID         uuid.UUID               `db:"id"`
-	Name       string                  `db:"name"`
-	Kind       device.Kind             `db:"kind"`
-	Protection device.ProtectionStatus `db:"protection"`
-	LastBackup *time.Time              `db:"last_backup" goqu:"omitempty"`
-	IPs        []device.IPAddress      `db:"ips"`
-	Agent      string                  `db:"agent"`
-	CreatedAt  time.Time               `db:"created_at"`
-	UpdatedAt  time.Time               `db:"updated_at"`
+	ID              uuid.UUID
+	Name            string
+	Hostname        string
+	Kind            device.Kind
+	Protection      device.ProtectionStatus
+	LastBackup      *time.Time
+	CPU             string
+	Ram             string
+	Disks           []string
+	IPs             []string
+	OperatingSystem string
+	Agent           string
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
 }
